# HVF-Extractor-App

./: README.md  app.py  pyproject.toml  requirements.txt
layout/: hvf.txt.txt
layouts/: HVF.json
src/: data_transform.py  exceptions.py  logger_config.py  ocr_engine.py
src/ophtho_ocr/export/: xlsx.py
src/ophtho_ocr/hvf/: extractor.py
src/ophtho_ocr/hvf/templates/: hvf_24_2.json
tests/: .~lock.left_result.xlsx#  left_result.xlsx  test.py  test_hvf_extractor.py
utils/: extraction.py  helpers.py
views/: layout_editor_view.py  single_extraction_view.py
